<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hexagons"
    android:backgroundTint="#25CF5151"
    android:backgroundTintMode="src_in"
    android:paddingLeft="10pt"
    android:paddingRight="10pt"
    tools:context=".AddLiabilityActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerPadding="10pt"
            android:orientation="vertical"
            android:paddingLeft="10pt"
            android:paddingTop="15pt"
            android:paddingRight="10pt">

            <LinearLayout
                android:id="@+id/name_ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name_prompt"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/name_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/liability_name_hint"
                    android:inputType="textPersonName"
                    android:textColorHint="#78909C"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cat_ll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10pt"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cat_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_prompt"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/category_spinner"
                        android:layout_width="237dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10pt"
                        android:layout_marginTop="10pt"
                        android:layout_marginRight="10pt"
                        android:layout_weight="1"
                        android:contentDescription="@string/select_cat"
                        android:entries="@array/predefined_categories"
                        android:spinnerMode="dropdown" />

                    <Button
                        android:id="@+id/add_cat"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10pt"
                        android:layout_marginEnd="10pt"
                        android:layout_marginBottom="10pt"
                        android:layout_weight="1"
                        android:contentDescription="@string/create_cat"
                        android:text="@string/add"
                        app:strokeColor="#6B4795" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/liability_type_ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10pt"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/liability_type_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type_prompt"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/liability_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/select_liability_type"
                    android:entries="@array/liability_type" />
            </LinearLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView"
                android:name="com.coconutbmp.leash.AddLoanDetailsFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.063"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.2" />

                <Button
                    android:id="@+id/continue_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Continue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>